Bibliografia en espanol, agrega material del paper nuevo

--- a/report/bibliografia.bib
+++ b/report/bibliografia.bib
@@ -171,3 +171,21 @@
     booktitle = "Proc.\ 20th European Conf.\ on Artificial Intelligence",
     publisher = "IOS Press"
 }
+
+@InProceedings{gent:transition,
+    author = {Ian P. Gent and Toby Walsh},
+    title = {The SAT Phase Transition},
+    booktitle = {},
+    year = {1994},
+    pages = {105--109},
+    publisher = {John Wiley And Sons}
+}
+
+@InProceedings{hoos:satlib,
+    author = {Holger H. Hoos and Thomas Stützle},
+    title = {SATLIB: An Online Resource for Research on SAT},
+    booktitle = {},
+    year = {2000},
+    pages = {283--292},
+    publisher = {IOS Press}
+}
