--- a/report/capitulos/capitulo2.tex
+++ b/report/capitulos/capitulo2.tex
@@ -757,6 +757,10 @@ acción \texttt{colocar-verdadera}, pues inicialmente se supone que ninguna
 $k$-tupla pertenece a $R_i^k$. De este modo, se establece una \textit{conjetura
 inicial} y se reduce el espacio de búsqueda al eliminar acciones.
 
+Las propiedades formales de la reducción se mantienen incorporando la
+simplificación. Se utilizará esta versión simplificada de la
+reducción para realizar los experimentos en el Capítulo \ref{Chapter4}.
+
 %\begin{theorem}
 %La función $f_{\sigma, \Phi}$ es una reducción en tiempo polinomial del
 %problema de decisión inducido por $\Phi$ a STRIPS-1.
