--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -107,28 +107,56 @@ si y sólo si existe un plan paralelo de longitud $\|\A\|+5\leq\ell\leq\|\A\|+6$
 %does not mean a linear number of operators.
 
 \section{Diseño de los experimentos}
-En esta sección se describe el protocolo experimental utilizado.
+%En esta sección se describe el protocolo experimental utilizado
+%en este trabajo.
 
 \subsection{Procedimiento}
 
+Los experimentos consisten en la modelación, traducción y resolución
+de problemas NP y PH. Para cada tipo de problema se ejecuta el planificador
+\texttt{M} sobre instancias de
+distintos tamaños y características, para luego analizar cuántos y cuáles
+instancias fueron resueltas satisfactoriamente en un tiempo limitado, y cuáles
+fueron los tiempos de corrida.
 Los detalles sobre la modelación de cada problema pueden encontrarse en el
 Apéndice \ref{apendiceA}.
 
-\section{Resultados en resolución de problemas NP}
+\section{Experimentos y resultados de problemas NP}
+Se realizaron experimentos en los problemas NP-completos: \SAT, \CLIQUE, \CHD
+\ (Camino \textit{Hamiltoniano} Dirigido),
+\TDM\ (\textit{3-Dimensional Matching}), \TCOL\ (3-colorabilidad) y \KCOL
+\ ($k$-colorabilidad).
+También se computó el número cromático de grafos aleatorios utilizando la
+herramienta como un oráculo.
 
+Los experimentos se realizaron en un procesador Intel Xeon corriendo a 1.86 GHz,
+con 2 GB de memoria RAM. Cada instancia se intentó resolver utilizando el
+planificador \texttt{M} durante 30 minutos, con un límite de 1GB de memoria.
 
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-\begin{table}[t]
+A continuación se presentan los resultados desglosados por dominio.
+Para cada tipo de problema, la tabla muestra el número de instancias resueltas
+($N^*$), el número total de instancias ($N$), el número de instancias resueltas
+que satisfacen la propiedad (\#pos), el número de instancias resueltas que
+\textbf{no} satisfacen la propiedad (\#neg), y el tiempo promedio de resolución
+en segundos. Sobre cada tabla se incluye el tamaño de la ventana de horizonte
+particular del problema ($\pwin$).
+
+\subsection{SAT}
+Las instancias de SAT fueron tomadas del repositorio
+SATLIB\footnote{\texttt{http://www.satlib.org}}, un sitio web hecho por
+\cite{hoos:satlib} que aloja una librería de problemas SAT que pertenecen a la
+región de la \textit{fase de transición} \citep{gent:transition}, es decir,
+tienen ciertas propiedades que los hacen difíciles de resolver.
+Los problemas de tipo uf20, uf50 y uf75 son instancias aleatorias con 20, 50 y
+75 variables proposicionales, respectivamente, mientras que las instancias de
+tipo uuf50 y uuf75 son no satisfacibles de tamaño 50 y 75.
+
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}c}{\footnotesize\textsc{Sat}: $\pwin=[n+5,n+6]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\SAT: $\pwin=[n+5,n+6]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %                                                             % sample standard deviation
 uf20          &        40/40 &     40 &      0 &       1.7 \\ % 2.0
@@ -139,22 +167,22 @@ uuf75         &         1/40 &      0 &      1 &   1,746.4 \\ % 0.0
 \midrule
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \SAT]{Resultados de M para \SAT}
 %\label{table:results}
 \end{table}
 
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah
-\begin{table}[t]
+\subsection{Problemas de grafos y \TDM}
+Las instancias de problemas de grafos se generaron de acuerdo con el modelo $G(n, p)$
+\cite{bollobas:random-graphs}, variando $n$ y $p$, y las instancias para \TDM\ se generaron
+escogiendo aleatoriamente tripletas de $\{0,\ldots,n-1\}^3$ con probabilidad
+$p$, siendo $p$ variable. 
+
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}l}{\footnotesize\textsc{Clique}: $\pwin=[2n+4, 3n+7]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\textsc{Clique}: $\pwin=[2n+4, 3n+7]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %5-3           &        40/40 &     10 &     30 &       0.0 \\ % 0.0
 %5-4           &        40/40 &      0 &     40 &       0.2 \\ % 0.5
@@ -175,16 +203,18 @@ Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum 
 25-6          &        36/40 &      8 &     28 &     394.1 \\ % 321.1
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \CLIQUE]{Resultados de M para \CLIQUE. Se utiliza
+la notación $x-y$ para denotar que el problema fue hallar una clique de tamaño
+$y$ en un grafo con $x$ nodos.}
 %\label{table:results}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}l}{\footnotesize\textsc{DirectedHamiltonianPath}: $\pwin=[n+3,n+10]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\CHD: $\pwin=[n+3,n+10]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %5             &        40/40 &     12 &     28 &       0.0 \\ % 0.0
 10            &        40/40 &     15 &     25 &       1.1 \\ % 2.3
@@ -195,16 +225,17 @@ Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum 
 \midrule
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \CHD]{Resultados de M para \CHD. La primera
+columna indica el número de nodos del grafo.}
 %\label{table:results}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}l}{\footnotesize\textsc{3-DimensionalMatching}: $\pwin=[3n+4,3n+6]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\TDM: $\pwin=[3n+4,3n+6]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %5             &        40/40 &     19 &     21 &       0.0 \\ % 0.0
 10            &        40/40 &     36 &      4 &       9.6 \\ % 2.8
@@ -214,16 +245,17 @@ Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum 
 \midrule
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \TDM]{Resultados de M para \TDM. La primera
+columna indica la cardinalidad del conjunto.}
 %\label{table:results}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}l}{\footnotesize\textsc{3-Colorability}: $\pwin=[2n+4, 2n+7]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\TCOL: $\pwin=[2n+4, 2n+7]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %5             &        40/40 &     37 &      3 &       0.0 \\ % 0.0
 10            &        40/40 &     18 &     22 &       0.1 \\ % 0.1
@@ -236,16 +268,17 @@ Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum 
 \midrule
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \TCOL]{Resultados de M para \TCOL. La primera
+columna indica el número de nodos del grafo.}
 %\label{table:results}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-\multicolumn{5}{@{}l}{\footnotesize$k$-\textsc{Colorability}: $\pwin=[2n+4,3n+6]$} \\
+\multicolumn{5}{@{}c}{\footnotesize\KCOL: $\pwin=[2n+4,3n+6]$} \\
 \midrule
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 %5-2           &        40/40 &     20 &     20 &       0.0 \\ % 0.0
 %5-3           &        40/40 &     37 &      3 &       0.0 \\ % 0.0
@@ -265,14 +298,16 @@ Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum Blah Lorem Ipsum 
 \midrule
 \end{tabular}
 \end{center}
-\caption[Resultados de M para *]{Resultados de M para *}
+\caption[Resultados de M para \KCOL]{Resultados de M para \KCOL. La primera
+columna indica el número de nodos del grafo y el número de colores de los que
+se intenta colorear.}
 %\label{table:results}
 \end{table}
 
-\begin{table}[t]
+\begin{table}[h!]
 \begin{center}
 \begin{tabular}{lllllll}
-              &    $N^*$/$N$ & \#pos. & \#neg. & avg.\ time \\
+              &    $N^*$/$N$ & \#pos. & \#neg. & tiempo prom. \\
 \midrule
 Total         &  1,614/1,920 &    706 &    908 &     180.9 \\ % a rellenar al final
 \end{tabular}
@@ -281,6 +316,113 @@ Total         &  1,614/1,920 &    706 &    908 &     180.9 \\ % a rellenar al fi
 %\label{table:results}
 \end{table}
 
-\section{Resultados en resolución de problemas PH}
+\begin{table}[h!]
+\centering
+\small
+\begin{tabular}{lllllllll}
+       &       & \multicolumn{7}{c}{$k$-colorabilidad} \\
+\cmidrule(l){3-9}
+instancia      & $\chi$ &     1 &     2 &     3 &     4 &     5 &     6 &     7 \\
+\midrule
+10-0.75 (1)      &      5 &     2 &     2 &     6 &   101 &\bf  3 &       &       \\
+10-0.75 (2)      &      5 &     1 &     2 &     2 &     6 &\bf  4 &       &       \\
+10-0.85        &      7 &     2 &     2 &     3 &     6 &     4 & 1,265 &\bf  4 \\
+15-0.25        &      2 &    27 &\bf 62 &       &       &       &       &       \\
+15-0.60        &      5 &    27 &    29 &    54 &   118 &\bf 72 &       &       \\
+15-0.70        &      6 &    28 &    28 &    33 &    47 &   329 &\bf 67 &       \\
+20-0.10        &      3 &   214 &   350 &\bf705 &       &       &       &       \\ % last number strange
+20-0.25        &      4 &   211 &   272 & 1,261 &\bf837 &       &       &       \\
+\midrule
+\end{tabular}
+\caption[Resultados de M sobre números cromáticos]{
+Resultados de M sobre el cómputo de números cromáticos en grafos aleatorios.
+La primera columna muestra el número de nodos del grafo y su probabilidad según
+el modelo $G(n,p)$.
+Para cada instancia, la tabla muestra el número cromático $\chi$, el tiempo
+(en segundos) para demostrar o descartar la $k$-colorabilidad para valores
+incrementales de $k$.
+El último valor de $k$ para cada instancia es el número cromático.}
+\label{table:chromatic}
+\end{table}
 
-\onecolumn
+\section{Resultados en resolución de problemas PH}
+hola
+\begin{table}[t]
+\centering
+\resizebox{3.3in}{!}{
+  \begin{tabular}{lllrrrrrrrrrl}
+    %\toprule
+    \qEA  & $\#\exists$ & $\#\forall$ &             & $n$ & $+$ & $-$ &    time &   len & {\sc\small pddl} \\
+    \midrule
+          &          60 &           1 &             &   5 & --- &   5 &   184.3 &    na &             18.4 \\
+          &             &           2 &             &   5 & --- &   1 & 4,382.5 &    na &             18.5 \\
+    \cmidrule{2-10}
+          &         100 &           1 &             &   5 &   4 &   1 &   176.6 &   316 &             20.4 \\ % #actions=36,017
+          &             &           2 &             &   5 &   3 &   2 & 3,471.9 &   628 &             20.5 \\ % #actions= 2,737
+    \midrule
+    \qEAE & $\#\exists$ & $\#\forall$ & $\#\exists$ & $n$ & $+$ & $-$ &    time &   len & {\sc\small pddl} \\
+    \midrule
+          &          10 &           2 &          30 &   5 & --- &   5 & 4,199.2 &    na &             17.5 \\
+          &             &           2 &          50 &   5 & --- &   5 & 2,313.9 &    na &             18.4 \\
+    \cmidrule{2-10}
+          &          30 &           2 &          30 &   5 & --- &   5 & 3,210.7 &    na &             18.5 \\
+          &             &           2 &          50 &   5 & --- &   5 & 3,166.3 &    na &             19.4 \\
+    \cmidrule{2-10}
+          &          50 &           2 &          30 &   5 & --- &   1 & 3,313.4 &    na &             19.4 \\
+          &             &           2 &          50 &   5 &   3 &   2 & 3,450.9 &   640 &             20.4 \\ % #actions=3,182.0
+    \midrule
+    \qAE  & $\#\forall$ & $\#\exists$ &             & $n$ & $+$ & $-$ &    time &   len & {\sc\small pddl} \\
+    \midrule
+          &           1 &         100 &             &   5 &   5 & --- &   147.9 &   319 &             20.2 \\ % #actions=45,378.6
+    \cmidrule{2-10}
+          &           2 &          30 &             &   5 & --- &   5 & 2,060.4 &    na &             16.9 \\
+          &             &          60 &             &   5 &   4 &   1 & 3,100.7 &   637 &             18.4 \\ % #actions=3,086.0
+          &             &          80 &             &   5 &   5 & --- & 2,893.2 &   637 &             19.3 \\ % #actions=2,961.4
+          &             &         100 &             &   5 &   5 & --- & 2,092.8 &   637 &             20.2 \\ % #actions=3,171.8
+    \cmidrule{2-10}
+          &           3 &          15 &             &   5 & --- & --- &      na &    na &              --- \\
+    \midrule
+    \qAEA & $\#\forall$ & $\#\exists$ & $\#\forall$ & $n$ & $+$ & $-$ &    time &   len & {\sc\small pddl} \\
+    \midrule
+          &           1 &          60 &           1 &   5 &   1 & --- &   404.7 &   635 &             21.1 \\
+          &             &          60 &           2 &   5 & --- & --- &     --- &    na &             21.2 \\
+          &             &          80 &           1 &   5 &   5 & --- &   403.2 &   635 &             22.0 \\
+          &             &         100 &           1 &   5 &   5 & --- &   390.8 &   635 &             23.1 \\
+    \cmidrule{2-10}
+          &           2 &          60 &           1 &   5 &   2 & --- &   456.7 & 1,269 &             21.2 \\
+          &             &          60 &           2 &   5 & --- & --- &     --- &    na &             21.3 \\
+          &             &          80 &           1 &   5 &   5 & --- &   499.5 & 1,269 &             22.1 \\
+          &             &         100 &           1 &   5 &   5 & --- &   454.9 & 1,269 &             23.2 \\
+    %\bottomrule
+  \end{tabular}
+}
+\caption{\small Random QBF problems with 150 clauses each
+  and 4 types of QBFs: \qEA, \qEAE, \qAE and \qAEA.
+  Columns for number of variables of each type, number of instances ($n$),
+  number of positive ($+$) and negative ($-$) instances, and averages for
+  time (in seconds), \emph{parallel} plan length (for solved instances),
+  and PDDL size (in KB).
+}
+\label{table:exp:qbf}
+\end{table}
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{crrrrrr}
+$|V|$ & $n$ & $+$ & $-$ &  time & plan len & {\sc\small pddl} \\
+\midrule
+    4 &   5 &   1 &   4 &   0.6 &   1,731 & 0.4 \\
+    5 &   5 &   2 &   3 &  41.0 &   6,695 & 0.6 \\
+    6 &   5 &   2 &   3 & 280.3 &  26,163 & 0.7 \\
+    7 &   5 &   2 &   2 &  38.2 & 102,935 & 0.8 \\
+    8 &   5 &   1 &   2 & 211.9 & 406,851 & 1.0 \\
+    9 &   5 & --- &   1 &   0.3 &      na & 1.1 \\
+\end{tabular}
+\caption{\small \coCOL on random graphs.
+  Columns for number of vertices ($|V|$), number of instances ($n$),
+  number of positive ($+$) and negative ($-$) instances, and averages for
+  time (in seconds), plan length (for solved positive instances), and
+  PDDL size (in KB).
+}
+\label{table:exp:co-3col}
+\end{table}
