--- a/report/capitulos/capitulo4.tex
+++ b/report/capitulos/capitulo4.tex
@@ -12,7 +12,7 @@ se explica el protocolo de realización de los experimentos y se describen breve
 los problemas NP y PH que se utilizarán. Finalmente, se discuten los resultados
 obtenidos en estos experimentos.
 
-\section{Escogencia de planificador}
+\section{Escogencia del planificador}
 De acuerdo con \cite{russell:book}, las estrategias más comunes para resolver
 un problema de planificación son la utilización de planificadores basados en
 SAT (SAT-\textit{planners}), la búsqueda heurística y la búsqueda basada en un
